# libcore

./: CMakeLists.txt  Makefile
.github/workflows/: build.yaml  build_alma.yaml  build_debian.yaml  build_ubuntu.yaml  clangformat_check.yaml  doxygen_build.yaml  doxygen_push.yaml  sonarcloud.yaml
docker/: Dockerfile.alma  Dockerfile.debian  Dockerfile.doxygen  Dockerfile.linux  Dockerfile.ubuntu2004  Dockerfile.ubuntu2404
public_types/: CMakeLists.txt
utilities/: CMakeLists.txt
